--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,10 @@
 h1 {
   text-align: center;
-  font-size: 60px;
-  color: rgb(118, 5, 5);
-  font-family: iron;
+  font-size: 80px;
+  color: rgb(248, 167, 167);
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  letter-spacing: 7px;
+  text-shadow: 1px 1px 4px #444444;
 }
 
 @font-face {
@@ -13,7 +15,7 @@ h1 {
 hr {
   width: 60%;
   height: 15px;
-  background: orange;
+  background: linear-gradient(90deg, orange, blue);
 }
 
 .texto {
